# 1_lang

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: lifecycle.py  middleware.py  uow.py
app/adapters/: ai_client.py  embeddings_client.py  queue_client.py  vector_client.py
app/api/: __init__.py  health_check.py  pipeline_router.py  test_router.py  tokens_router.py  workers_router.py
app/commands/: base.py  w2_command.py  w3_command.py  w4_command.py  w5_command.py
app/common/: enums.py  exceptions.py  logging.py
app/core/: aiohttp_exception_handler.py  config.py  database.py
app/dependencies/: __init__.py  infrastructure.py  services.py
app/models/: __init__.py  ai_token_usage.py  phrase_data.py  phrase_embeddings.py  phrases.py  worker_run_log.py
app/pyd/: ai_schemas.py  requests.py  responses.py
app/repositories/: __init__.py  ai_token_usage_repository.py  base_repository.py  phrase_data_repository.py  phrase_embedding_repository.py  phrase_loading_repository.py  phrase_repository.py  phrase_vector_repository.py  repository_error_handler.py  worker_run_log_repository.py
app/services/: ai_token_usage_service.py  base.py  health_check_service.py  phrase_data_service.py  phrase_embedding_service.py  phrase_loading_service.py  phrase_search_service.py  phrase_service.py  phrase_translation_service.py  (+8 more)
evaluation/: build_dataset_t1.py  build_dataset_w1.py  build_dataset_w2.py  build_dataset_w3.py  config.py  run_t1.py  run_w1.py  run_w2.py  run_w3.py
tests/: conftest.py
(+54 files in other folders)
