[project]
name = "my-service"
version = "0.1.0"
description = ""
authors = [
    {name = "YourName", email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.0,<4.0.0"
dependencies = [
    "uvicorn (>=0.46.0,<0.47.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "grpcio (>=1.81.0,<2.0.0)",
    "grpcio-tools (>=1.81.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.12"
mypy = "^2.0.0"
psycopg2-binary = "^2.9.12"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"
testcontainers = "^4.14.2"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.mypy]
ignore_missing_imports = false
